[gd_scene load_steps=5 format=3 uid="uid://3vhwbkfth527"]

[ext_resource type="Texture2D" uid="uid://vgttbonhdc2b" path="res://ForestAI1.jpg" id="1_k0nrd"]
[ext_resource type="Script" path="res://MainMenu.gd" id="2_pkajh"]
[ext_resource type="FontFile" uid="uid://bc0w3ab8d8grf" path="res://feast-of-flesh-bb/fofbb_ital.otf" id="3_15ny0"]
[ext_resource type="AudioStream" uid="uid://bu4tdfecvch6d" path="res://Sounds/hitHurt.wav" id="4_qfl3l"]

[node name="MainMenu" type="Node"]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -116.0
offset_right = 134.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
texture = ExtResource("1_k0nrd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_pkajh")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Main/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_15ny0")
theme_override_font_sizes/font_size = 48
text = "Forest of dread"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPlay" type="Button" parent="CanvasLayer/Main/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_15ny0")
theme_override_font_sizes/font_size = 28
text = "Play"
flat = true

[node name="ButtonSettings" type="Button" parent="CanvasLayer/Main/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_15ny0")
theme_override_font_sizes/font_size = 28
text = "Settings"
flat = true

[node name="ButtonQuit" type="Button" parent="CanvasLayer/Main/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_15ny0")
theme_override_font_sizes/font_size = 28
text = "Quit"
flat = true

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
visible = false
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Settings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/CenterContainer"]
self_modulate = Color(0, 0, 0, 0)
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_15ny0")
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonSettingsBack" type="Button" parent="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_15ny0")
text = "Back"

[node name="ButtonSound" type="AudioStreamPlayer" parent="CanvasLayer"]
stream = ExtResource("4_qfl3l")

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/VBoxContainer/ButtonPlay" to="CanvasLayer" method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/VBoxContainer/ButtonSettings" to="CanvasLayer" method="_on_button_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/VBoxContainer/ButtonQuit" to="CanvasLayer" method="_on_button_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonSettingsBack" to="CanvasLayer" method="_on_button_settings_back_pressed"]
